# python-best-practices-implementation

./: LICENSE  README.md  pyproject.toml
src/python_best_practices_implementation/: __init__.py  console.py
